--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
 	<header>
 		<div class="header-wrap">
 			<div class="container">
-				<div class="logo"><a href="index.html"><img src="images/page_template/logo.png" alt=""></a></div>
+				<div class="logo">
+					<a href="index.html"><img src="images/page_template/logo.png" alt=""></a>
+					<p>&#8220;Cambodia's leading mobile banking services provider.&#8221;</p>
+				</div>
 				<div class="top-header">
 					<a href="#" class="get-wing-app">Get Wing App!</a>
 					<div class="login-wrap fl">
@@ -266,7 +269,7 @@
 					<li>
 						<div class="home-slide-item">
 							<div class="coverimage">
-								<video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" playsinline auto muted loop>
+								<video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" playsinline autoplay muted loop>
 										<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
 									<source src="http://thenewcode.com/assets/videos/polina.webm" type="video/webm">
 									<source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">
