--- a/online-payment.html
+++ b/online-payment.html
@@ -119,8 +119,12 @@
 	<header>
 		<div class="header-wrap">
 			<div class="container">
-				<div class="logo"><a href="index.html"><img src="images/page_template/logo.png" alt=""></a></div>
+				<div class="logo">
+					<a href="index.html"><img src="images/page_template/logo.png" alt=""></a>
+					<p>&#8220;Cambodia's leading mobile banking services provider.&#8221;</p>
+				</div>
 				<div class="top-header">
+					<a href="#" class="get-wing-app">Get Wing App!</a>
 					<div class="login-wrap fl">
 						<a href="#">Log in</a>
 						<a href="#" >Register</a>
@@ -169,7 +173,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="subnav-wrapper">
 			<div class="first-layer">
 				<div class="container small-container">
@@ -229,10 +233,10 @@
 								</ul>
 							</div>
 						</div>
-					</div>	
+					</div>
 				</div>
-			</div>	
-			
+			</div>
+
 		</div>
 	</header>
 	<section id="main-wrapper">
@@ -275,7 +279,7 @@
 						</div>
 						<a href="#" class="btn apply-btn">Apply Now</a>
 					</div>
-				</div>	
+				</div>
 			</div>
 		</div>
 		<section id="section1" class="sec-pad null-bot jq-section">
@@ -284,159 +288,143 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<h2 class="sec-title small">Our Online Partners</h2>
-							<div class="card-list">
-								<h4 class="card-categ-title">Purchase Bus Tickets</h4>
-								<div class="flex">
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
-												<p><strong>Major Cineplex</strong></p>
-												<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
-											</a>
+						</div>
+
+					</div>
+				</div>
+				<div class="container small-container">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="the-filter-wrap">
+								<div class="the-filter">
+									<div class="row">
+										<div class="col-sm-2">
+											<label><strong>Filter by: </strong></label>
 										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
-												<p><strong>Fannow</strong></p>
-												<p><span>Fannow App</span></p>
-											</a>
+										<div class="col-sm-4 col-xs-6">
+											<select class="custom-select">
+												<option>Categories</option>
+												<option>Sample 1</option>
+												<option>Sample 2</option>
+												<option>Sample 3</option>
+											</select>
 										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-											<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
-											<p><strong>Legend Cinema</strong></p>
-											<p><span>Legend Cinema</span></p>
-											</a>
+										<div class="col-sm-4 col-xs-6">
+											<select class="custom-select">
+												<option>Date</option>
+												<option>Ascending</option>
+												<option>Descending</option>
+											</select>
 										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
-												<p><strong>Legend Cinema</strong></p>
-												<p><span>Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
-												<p><strong>Legend Cinema</strong></p>
-												<p><span href="#">Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
-												<p><strong>Major Cineplex</strong></p>
-												<p><span >www.majorcineplex.com.kh or Major Mobile App</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
-												<p><strong>Fannow</strong></p>
-												<p><span>Fannow App</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-											<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
-											<p><strong>Legend Cinema</strong></p>
-											<p><span>Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
-												<p><strong>Legend Cinema</strong></p>
-												<p><span>Legend Cinema</span></p>
-											</a>
+										<div class="col-sm-2 col-xs-12">
+											<a href="#" class="btn btn-green">Submit</a>
 										</div>
 									</div>
 								</div>
-							</div>
+								<div class="filter-bg card-list">
 
-							<div class="card-list">
-								<h4 class="card-categ-title">Purchase Technology Products & Top Up</h4>
-								<div class="flex">
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
-												<p><strong>Major Cineplex</strong></p>
-												<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
-											</a>
+									<!-- Loop Area -->
+									<div class="row">
+										<!-- Search Title -->
+										<h4 class="categ-title">You are looking for "<strong>Bus Ticket</strong>"</h4>
+										<!-- Search Title END -->
+										<div class="flex">
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
+														<p><strong>Major Cineplex</strong></p>
+														<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
+														<p><strong>Fannow</strong></p>
+														<p><span>Fannow App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+													<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
+													<p><strong>Legend Cinema</strong></p>
+													<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span href="#">Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
+														<p><strong>Major Cineplex</strong></p>
+														<p><span>www.majorcineplex.com.kh or Major Mobile App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
+														<p><strong>Fannow</strong></p>
+														<p><span>Fannow App</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+													<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
+													<p><strong>Legend Cinema</strong></p>
+													<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
+											<div class="card-item">
+												<div class="card-content">
+													<a href="#">
+														<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
+														<p><strong>Legend Cinema</strong></p>
+														<p><span>Legend Cinema</span></p>
+													</a>
+												</div>
+											</div>
 										</div>
 									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/giantibis.png" alt=""></div>
-												<p><strong>Fannow</strong></p>
-												<p><span>Fannow App</span></p>
-											</a>
+									<!-- Loop Area END -->
+
+									<div class="loading-spinner-wrapper" id="app-loader">
+												<span class="loading-spinner">
+													<i class="one"></i>
+													<i class="two"></i>
+													<i class="three"></i>
+												</span>
 										</div>
+									<div class="text-center">
+										<a href="#" class="btn">Load More Result</a>
 									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-											<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
-											<p><strong>Legend Cinema</strong></p>
-											<p><span>Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
-												<p><strong>Legend Cinema</strong></p>
-												<p><span>Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/legendcinema.png" alt=""></div>
-												<p><strong>Legend Cinema</strong></p>
-												<p><span href="#">Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-												<div class="card-item-img"><img src="images/online-payment/FanNow.png" alt=""></div>
-												<p><strong>Major Cineplex</strong></p>
-												<p><span >www.majorcineplex.com.kh or Major Mobile App</span></p>
-											</a>
-										</div>
-									</div>
-									<div class="card-item">
-										<div class="card-content">
-											<a href="#">
-											<div class="card-item-img"><img src="images/online-payment/Major-Cineplex.png" alt=""></div>
-											<p><strong>Legend Cinema</strong></p>
-											<p><span>Legend Cinema</span></p>
-											</a>
-										</div>
-									</div>
+
 								</div>
 							</div>
 						</div>
@@ -445,16 +433,15 @@
 			</div>
 		</section>
 
-
 		<div class="space-bottom bg-grey"></div>
-		
+
 	</section>
 </section>
 <footer>
 	<div class="get-wingapp">
 		<div class="container">
 			<div class="wing-app-detail">
-				<h2>Get the Wing App!</h2>
+				<h2><a href="#" class="btn-wing-app">Get the Wing App!</a></h2>
 				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 				<div class="dl-app-wrap">
 					<ul>
@@ -465,10 +452,10 @@
 				</div>
 			</div>
 			<div class="wing-app-img"><img src="images/footer/wingapp.png" alt=""></div>
-			
+
 			<div class="clr"></div>
 			<div class="row wing-app-feature">
-				<div class="col-sm-4"> 
+				<div class="col-sm-4">
 					<div class="wf-item">
 						<h5>Phone Top Up</h5>
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
@@ -523,9 +510,20 @@
 					</ul>
 				</div>
 			</div>
-		</div>	
+		</div>
+	</div>
+	<div class="foot-note">
+		<div class="container">
+			<p>&copy; 2017 Wing (Cambodia) Limited Specialised Bank</p>
+		</div>
 	</div>
 </footer>
+<div class="fb-page-like">
+	<div class="fb-frame ease">
+		<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2F&tabs=timeline&width=250&height=300&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=344409647148" width="250" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+	</div>
+	<a href="javascript:void(0);" class="show-hide"><img src="images/inner/FB-FindUsonFacebook-online-144.png"></a>
+</div>
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/jquery-ui.min.js"></script>
 <script src="js/plugins.js"></script>
@@ -574,7 +572,7 @@
 		updateNav();
 
 		var lHeight = $('.layout-3 .right-img-wrap').find('img').attr('height');
-		$('.layout-3').css("min-height", function(){ 
+		$('.layout-3').css("min-height", function(){
 
 		    return $(this).outerHeight(lHeight);
 		});
@@ -615,7 +613,7 @@
 
 			$('header').addClass('scroll-up');
 		}
-    
+
 	    if(  _cur_top >=  totalBread ) {
 			$('.sec-menu-fix').addClass('is-fixed');
 		} else {
