update index images

--- a/promo-single.html
+++ b/promo-single.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Wing Money | About</title>
+<title>Article Inner</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 		<div class="subnav-wrapper">
 			<div class="first-layer">
 				<div class="container small-container">
@@ -199,7 +199,6 @@
 								<p>Use Wing to purchase online</p>
 							</a>
 						</li>
-
 					</ul>
 				</div>
 			</div>
@@ -229,10 +228,10 @@
 								</ul>
 							</div>
 						</div>
-					</div>	
+					</div>
 				</div>
-			</div>	
-			
+			</div>
+
 		</div>
 	</header>
 	<section id="main-wrapper">
@@ -250,61 +249,75 @@
 		</div>
 		<div class="news-wrap news-single">
 			<div class="container">
-				<div class="news-single-content">
-					<div class="featured-img-wrap">
-						<img class="aligncenter" src="images/OTC-KNY-promo-for-Wed-03-EN-1200x480.jpg" alt="">
-						<span class="categ-wrap">Category Goes here</span>
-					</div>
-					
-					<h2>Happy International Women's Day</h2>
-					<p>To Celebrate Women’s Day, You have chance to win round-trip air tickets to Thailand for 2 people by Pay with Wing at our partner retail stores and online shop.</p>
-					<p>This promotion start from 07th March until 07th April 2017</p>
-					<p>For more detail about Pay with Wing and Online Payment, please visit below link:</p>
-					<ul class="bullets">
-						<li>Pay with Wing: <a href="#">https://www.wingmoney.com/personal/pay-with-wing/</a></li>
-						<li>Online Payment: <a href="#">https://www.wingmoney.com/personal/online-payment/</a></li>
-					</ul>
+				<div class="col-sm-9">
+					<div class="news-single-content">
+						<div class="featured-img-wrap">
+							<img class="aligncenter" src="images/OTC-KNY-promo-for-Wed-03-EN-1200x480.jpg" alt="">
+							<span class="categ-wrap">Category Goes here</span>
+						</div>
 
-					<div class="tags-list">
-						<span class="tags-label">Tags: </span>
-						<a href="#">Sample 1</a>
-						<a href="#">Sample 2</a>
-						<a href="#">Sample 3</a>
-						<a href="#">Sample 4</a>
-						<a href="#">Sample 5</a>
+						<h2>Happy International Women's Day</h2>
+						<p>To Celebrate Women’s Day, You have chance to win round-trip air tickets to Thailand for 2 people by Pay with Wing at our partner retail stores and online shop.</p>
+						<p>This promotion start from 07th March until 07th April 2017</p>
+						<p>For more detail about Pay with Wing and Online Payment, please visit below link:</p>
+						<ul class="bullets">
+							<li>Pay with Wing: <a href="#">https://www.wingmoney.com/personal/pay-with-wing/</a></li>
+							<li>Online Payment: <a href="#">https://www.wingmoney.com/personal/online-payment/</a></li>
+						</ul>
+
+						<div class="tags-list">
+							<span class="tags-label">Tags: </span>
+							<a href="#">Sample 1</a>
+							<a href="#">Sample 2</a>
+							<a href="#">Sample 3</a>
+							<a href="#">Sample 4</a>
+							<a href="#">Sample 5</a>
+						</div>
+					</div>
+					<div class="related-content">
+						<h5 class="h-new-title c-orange text-left">Related PROMOS</h5>
+						<div class="row">
+							<div class="col-sm-4">
+								<div class="h-news-item text-center">
+									<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
+									<p>Pay with Wing to Win Round-Trip Air Tickets</p>
+									<a href="#" class="a-link">Learn More</a>
+								</div>
+							</div>
+							<div class="col-sm-4">
+								<div class="h-news-item text-center">
+									<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
+									<p>Pay with Wing to Win Round-Trip Air Tickets</p>
+									<a href="#" class="a-link">Learn More</a>
+								</div>
+							</div>
+							<div class="col-sm-4">
+								<div class="h-news-item text-center">
+									<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
+									<p>Pay with Wing to Win Round-Trip Air Tickets</p>
+									<a href="#" class="a-link">Learn More</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-
-				<div class="related-content">
-					<h5 class="h-new-title c-orange text-left">Related PROMOS</h5>
-					<div class="row">
-						<div class="col-sm-4">
-							<div class="h-news-item text-center">
-								<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
-								<p>Pay with Wing to Win Round-Trip Air Tickets</p>
-								<a href="#" class="a-link">Learn More</a>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="h-news-item text-center">
-								<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
-								<p>Pay with Wing to Win Round-Trip Air Tickets</p>
-								<a href="#" class="a-link">Learn More</a>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="h-news-item text-center">
-								<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
-								<p>Pay with Wing to Win Round-Trip Air Tickets</p>
-								<a href="#" class="a-link">Learn More</a>
-							</div>
-						</div>
+				<div class="col-sm-3 side-list">
+					<div class="box">
+						<h5>Wing Services</h5>
+						<p><a href="#">Transfer Money</a></p>
+						<p><a href="#">Phone Top Up</a></p>
+						<p><a href="#">Bill Payment</a></p>
+						<p><a href="#">iPay</a></p>
+						<p><a href="#">Wing Account Services Fee</a></p>
+					</div>
+					<div class="box">
+						<img src="images/paywing.jpg" border="0" align="center"/>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="space-bottom"></div>
-		
+
 	</section>
 </section>
 <footer>
@@ -322,10 +335,10 @@
 				</div>
 			</div>
 			<div class="wing-app-img"><img src="images/footer/wingapp.png" alt=""></div>
-			
+
 			<div class="clr"></div>
 			<div class="row wing-app-feature">
-				<div class="col-sm-4"> 
+				<div class="col-sm-4">
 					<div class="wf-item">
 						<h5>Phone Top Up</h5>
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
@@ -380,7 +393,7 @@
 					</ul>
 				</div>
 			</div>
-		</div>	
+		</div>
 	</div>
 </footer>
 <script src="js/lib/jquery.min.js"></script>
@@ -389,7 +402,7 @@
 <script src="js/jquery.flexslider.js"></script>
 <script src="js/custom.js"></script>
 <script type="text/javascript">
-	
+
 </script>
 </body>
 </html>
