--- a/promo-single.html
+++ b/promo-single.html
@@ -249,7 +249,7 @@
 		</div>
 		<div class="news-wrap news-single">
 			<div class="container">
-				<div class="col-sm-9">
+				<div class="col-sm-8">
 					<div class="news-single-content">
 						<div class="featured-img-wrap">
 							<img class="aligncenter" src="images/OTC-KNY-promo-for-Wed-03-EN-1200x480.jpg" alt="">
@@ -301,7 +301,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-3 side-list">
+				<div class="col-sm-4 side-list">
 					<div class="box">
 						<h5>Wing Services</h5>
 						<p><a href="#">Transfer Money</a></p>
@@ -311,7 +311,12 @@
 						<p><a href="#">Wing Account Services Fee</a></p>
 					</div>
 					<div class="box">
-						<img src="images/paywing.jpg" border="0" align="center"/>
+						<h5>Pay with Wing</h5>
+						<a href="#"><img src="images/paywing.jpg" border="0" align="center"/></a>
+					</div>
+					<div class="box">
+						<h5>Phone Top Up</h5>
+						<iframe width="100%" height="250" src="https://www.youtube.com/embed/vpkK8r_IKpc?list=PLs8n5kr4rPNW8VlXdLwBJ6Wty7qI4h0y1?control=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
