--- a/index.html
+++ b/index.html
@@ -446,7 +446,6 @@
 	</div>
 	<div class="container">
 		<div class="footer-menu">
-			<div class="row">
 				<div class="col-sm-4">
 					<h5 class="fm-title">WING PARTNER</h5>
 					<ul>
@@ -472,7 +471,6 @@
 						<li><a href="#">Careers</a></li>
 					</ul>
 				</div>
-			</div>
 		</div>
 		<div class="footer-left">
 			<div class="footer-logo"><a href="#"><img src="images/footer/footer-logo.png" alt=""></a></div>
@@ -490,7 +488,7 @@
 	<div class="fb-frame ease">
 		<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook%2F&tabs=timeline&width=250&height=300&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=344409647148" width="250" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 	</div>
-	<a href="javascript:void(0);" class="show-hide"><img src="images/inner/FB-FindUsonFacebook-online-144.png"></a>
+	<a href="javascript:void(0);" class="show-hide">show</a>
 </div>
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/lib/jquery-ui.min.js"></script>
