--- a/index.html
+++ b/index.html
@@ -290,6 +290,26 @@
 								<img class="coverimage-desktop" data-src="images/home/slide2.jpg" src="" />
 								<img class="coverimage-mobile" data-src="images/home/slide1-mobile.jpg" src="" />
 							</div>
+							<div class="table-wrap">
+								<div class="table-cell">
+									<div class="container">
+										<div class="home-slide-text text-left">
+										<h1>test video</h1>
+										<p>asdfasdf</p>
+										<a href="#" class="btn btn-small play-btn" data-videoid="2E2nCbIZ_Lc">Watch Video <span class="play-icon"></span></a>	</div>
+									</div>
+								</div>
+							</div>
+							<a href="#" ></a>
+						</div>
+					</li>
+					<li>
+						<div class="home-slide-item">
+							<div class="coverimage">
+								<img class="coverimage-desktop" data-src="images/home/slide2.jpg" src="" />
+								<img class="coverimage-mobile" data-src="images/home/slide1-mobile.jpg" src="" />
+							</div>
+							
 							<a href="#" class="play-btn" data-videoid="2E2nCbIZ_Lc"></a>
 						</div>
 					</li>
