--- a/promo-single.html
+++ b/promo-single.html
@@ -274,32 +274,6 @@
 							<a href="#">Sample 5</a>
 						</div>
 					</div>
-					<div class="related-content">
-						<h5 class="h-new-title c-orange text-left">Related PROMOS</h5>
-						<div class="row">
-							<div class="col-sm-4">
-								<div class="h-news-item text-center">
-									<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
-									<p>Pay with Wing to Win Round-Trip Air Tickets</p>
-									<a href="#" class="a-link">Learn More</a>
-								</div>
-							</div>
-							<div class="col-sm-4">
-								<div class="h-news-item text-center">
-									<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
-									<p>Pay with Wing to Win Round-Trip Air Tickets</p>
-									<a href="#" class="a-link">Learn More</a>
-								</div>
-							</div>
-							<div class="col-sm-4">
-								<div class="h-news-item text-center">
-									<div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
-									<p>Pay with Wing to Win Round-Trip Air Tickets</p>
-									<a href="#" class="a-link">Learn More</a>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="col-sm-4 side-list">
 					<div class="box">
@@ -319,7 +293,34 @@
 						<iframe width="100%" height="250" src="https://www.youtube.com/embed/vpkK8r_IKpc?list=PLs8n5kr4rPNW8VlXdLwBJ6Wty7qI4h0y1?control=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
-			</div>
+<div class="col-sm-12 related-content">
+  <h5 class="h-new-title c-orange text-left">Related PROMOS</h5>
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="h-news-item text-center">
+        <div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
+        <p>Pay with Wing to Win Round-Trip Air Tickets</p>
+        <a href="#" class="a-link">Learn More</a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="h-news-item text-center">
+        <div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
+        <p>Pay with Wing to Win Round-Trip Air Tickets</p>
+        <a href="#" class="a-link">Learn More</a>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="h-news-item text-center">
+        <div class="img-wrap"><a href="#"><img src="images/home/img1.jpg" alt=""></a></div>
+        <p>Pay with Wing to Win Round-Trip Air Tickets</p>
+        <a href="#" class="a-link">Learn More</a>
+      </div>
+    </div>
+  </div>
+</div>
+			
+      </div>
 		</div>
 		<div class="space-bottom"></div>
 
