--- a/discount-program.html
+++ b/discount-program.html
@@ -313,6 +313,11 @@
 								</div>
 								<div class="filter-bg">
 									<h4 class="categ-title">You are looking for "<strong>Book Shops &amp; Souvenirs</strong>"</h4>
+									<div class="filter-hd">
+										<div class="title">Title</div>
+										<div class="discount">Discount</div>
+										<div class="contact">Contact</div>
+									</div>
 									<ul>
 										<li>
 											<a href="#">
